# suricato

./: .rustfmt.toml  Cargo.toml  README.md  index.html
public/: test.glb
src/: animation.rs  attributes.rs  buffer_gpu.rs  camera.rs  generate_id.rs  geometry.rs  index_buffer.rs  lib.rs  main.rs  material.rs  mesh.rs  obj_parser.rs  program.rs  renderer.rs  texture.rs  transform.rs  ubo.rs  uniforms.rs  utils.rs  vertex_buffer.rs
