[package]
name = "suricato"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
glam = "0.30.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "console",
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlActiveInfo',
    'WebGlUniformLocation',
    'HtmlImageElement',
    'Performance',
    'Response',
    'Url',
    'Blob',
    'WebGlTexture',
] }
